saved the formatted data into a csv

--- a/task.ipynb
+++ b/task.ipynb
@@ -233,132 +233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "993cbc2c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>date</th>\n",
-       "      <th>region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1638.0</td>\n",
-       "      <td>2018-02-06</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1647.0</td>\n",
-       "      <td>2018-02-06</td>\n",
-       "      <td>south</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1731.0</td>\n",
-       "      <td>2018-02-06</td>\n",
-       "      <td>east</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1557.0</td>\n",
-       "      <td>2018-02-06</td>\n",
-       "      <td>west</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1587.0</td>\n",
-       "      <td>2018-02-07</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41107</th>\n",
-       "      <td>2390.0</td>\n",
-       "      <td>2022-02-13</td>\n",
-       "      <td>west</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41132</th>\n",
-       "      <td>2035.0</td>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41133</th>\n",
-       "      <td>2465.0</td>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>south</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41134</th>\n",
-       "      <td>2500.0</td>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>east</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41135</th>\n",
-       "      <td>2115.0</td>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>west</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5880 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Sales        date region\n",
-       "0      1638.0  2018-02-06  north\n",
-       "1      1647.0  2018-02-06  south\n",
-       "2      1731.0  2018-02-06   east\n",
-       "3      1557.0  2018-02-06   west\n",
-       "28     1587.0  2018-02-07  north\n",
-       "...       ...         ...    ...\n",
-       "41107  2390.0  2022-02-13   west\n",
-       "41132  2035.0  2022-02-14  north\n",
-       "41133  2465.0  2022-02-14  south\n",
-       "41134  2500.0  2022-02-14   east\n",
-       "41135  2115.0  2022-02-14   west\n",
-       "\n",
-       "[5880 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_final"
+    "df_final.to_csv(\"formatted_data.csv\")"
    ]
   },
   {
