saved the formatted data into a csv

--- a/task.ipynb
+++ b/task.ipynb
@@ -233,12 +233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "993cbc2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.to_csv(\"formatted_data.csv\")"
+    "df_final.to_csv(\"formatted_data.csv\",index=False)"
    ]
   },
   {
