Data Visualiser according to region

--- a/task4.ipynb
+++ b/task4.ipynb
@@ -2,30 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "35716ead",
+   "execution_count": 33,
+   "id": "804952c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import Dash, html, dcc\n",
+    "from dash import Dash, html, dcc, Input, Output, callback\n",
     "import plotly.express as px\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "153a5bcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app = Dash()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0f287080",
+   "execution_count": 34,
+   "id": "eea31787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e032a01b",
+   "execution_count": 35,
+   "id": "725eb11b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,24 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ee2d7967",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app.layout = html.Div(children=[\n",
-    "    html.H1(children='Sales of Pink Morsel',style={\"textAlign\": \"center\", \"color\": \"#04FFFB\", \"padding\": \"20px\"}),\n",
-    "    dcc.Graph(\n",
-    "        id='sales-graph',\n",
-    "        figure=fig\n",
-    "    )\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a571176b",
+   "execution_count": 55,
+   "id": "b101e2ac",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +53,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17b14634980>"
+       "<IPython.lib.display.IFrame at 0x124a1fa5520>"
       ]
      },
      "metadata": {},
@@ -87,9 +61,43 @@
     }
    ],
    "source": [
+    "app = Dash()\n",
+    "app.layout = html.Div(children=[\n",
+    "    html.H1(children='Sales of Pink Morsel',style={\"textAlign\": \"center\"}),\n",
+    "    dcc.RadioItems(id='region-selector',options=df.region.unique(), value=df.region.unique()[0]),\n",
+    "    \n",
+    "    dcc.Graph(id='line-chart')\n",
+    "], style={\"backgroundColor\":\"white\"})\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('line-chart','figure'),\n",
+    "    Input('region-selector','value')\n",
+    ")\n",
+    "def update_output(region):\n",
+    "    filtered_df = df[df.region == region]\n",
+    "\n",
+    "    filtered_df = filtered_df.sort_values(by='date')\n",
+    "\n",
+    "    fig = px.line(filtered_df,x='date',y='Sales',title=f'Sales Trends in {region}')\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        title={'x':.5,'xanchor':'center'}\n",
+    "    )\n",
+    "\n",
+    "    return fig\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b4352d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
